--- a/config.json
+++ b/config.json
@@ -7,5 +7,9 @@
         "options": {
             "encrypt": false
         }
+    },
+    "androidApp":{
+        "projectId": "fabricwarehouse-9d4af",
+        "FCMAccessToken":"105841883736149561477"
     }
 }
