--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.7.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "firebase-admin": "^12.3.0",
     "fs": "^0.0.1-security",
+    "google-auth-library": "^9.13.0",
     "mssql": "^10.0.2",
     "mybatis-mapper": "^0.6.8",
     "mysql": "^2.18.1",
