--- a/package.json
+++ b/package.json
@@ -12,20 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.3.0",
     "fs": "^0.0.1-security",
-    "google-auth-library": "^9.13.0",
-    "mssql": "^10.0.2",
-    "mybatis-mapper": "^0.6.8",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.6.3",
+    "mssql": "^11.0.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.0",
     "pm2": "^5.3.1",
-    "stack-trace": "^1.0.0-pre2",
     "urlencode": "^1.1.0"
   }
 }
