--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^12.3.0",
     "fs": "^0.0.1-security",
     "mssql": "^11.0.1",
+    "mysql2": "^3.11.0",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.0",
     "pm2": "^5.3.1",
